Fix: Add missing images and update paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <main>
         <section id="home" class="hero">
-            <div class="hero-bg" style="background-image: url('assets/images/hero.jpg');"></div>
+            <div class="hero-bg" style="background-image: url('./assets/images/hero_street.jpg');"></div>
             <div class="hero-overlay"></div>
             <div class="hero-content reveal">
                 <span class="subtitle">Emerging Actor & Model</span>
@@ -114,7 +114,7 @@
             <div class="container">
                 <div class="about-wrapper">
                     <div class="about-image reveal slide-left">
-                        <img src="assets/images/about.jpg" alt="Diwash Neupane">
+                        <img src="./assets/images/about_me.jpg" alt="Diwash Neupane">
                         <div class="img-frame"></div>
                     </div>
                     <div class="about-content reveal slide-right">
@@ -151,25 +151,21 @@
             <div class="container">
                 <h2 class="section-title text-center reveal">The Portfolio</h2>
                 <div class="gallery-grid">
-                    <div class="gallery-item reveal scale-up">
-                        <img src="assets/images/pool.jpg" alt="Model Shoot 1">
+                    <div class="gallery-item tall reveal scale-up">
+                        <img src="./assets/images/studio_couch.jpg" alt="Studio Session">
+                        <div class="overlay"><span>Elite</span></div>
+                    </div>
+                    <div class="gallery-item wide reveal scale-up" style="transition-delay: 0.1s;">
+                        <img src="./assets/images/vogue_profile.jpg" alt="Vogue Portrait">
+                        <div class="overlay"><span>Urban</span></div>
+                    </div>
+                    <div class="gallery-item wide reveal scale-up" style="transition-delay: 0.2s;">
+                        <img src="./assets/images/pool_vibe.jpg" alt="Poolside Vibe">
                         <div class="overlay"><span>Serene</span></div>
                     </div>
-                    <div class="gallery-item reveal scale-up" style="transition-delay: 0.1s;">
-                        <img src="assets/images/hero.jpg" alt="Model Shoot 2">
-                        <div class="overlay"><span>Intense</span></div>
-                    </div>
-                    <div class="gallery-item reveal scale-up" style="transition-delay: 0.2s;">
-                        <img src="assets/images/style1.jpg" alt="Model Shoot 3">
-                        <div class="overlay"><span>Modern</span></div>
-                    </div>
-                    <div class="gallery-item reveal scale-up" style="transition-delay: 0.3s;">
-                        <img src="assets/images/style2.jpg" alt="Model Shoot 4">
+                    <div class="gallery-item tall reveal scale-up" style="transition-delay: 0.3s;">
+                        <img src="./assets/images/profile_tall.jpg" alt="Classic Profile">
                         <div class="overlay"><span>Classic</span></div>
-                    </div>
-                    <div class="gallery-item reveal scale-up" style="transition-delay: 0.4s;">
-                        <img src="assets/images/about.jpg" alt="Model Shoot 5">
-                        <div class="overlay"><span>Authentic</span></div>
                     </div>
                 </div>
             </div>
